--- a/sample/AspNetFullFrameworkSampleApp/Web.config
+++ b/sample/AspNetFullFrameworkSampleApp/Web.config
@@ -29,7 +29,7 @@
 	<system.webServer>
 		<modules>
 			<remove name="ElasticApmModule"/>
-			<add name="ElasticApmModule" type="Elastic.Apm.AspNetFullFramework.ElasticApmModule"/>
+			<add name="ElasticApmModule" type="Elastic.Apm.AspNetFullFramework.ElasticApmModule, Elastic.Apm.AspNetFullFramework"/>
 			<remove name="TelemetryCorrelationHttpModule"/>
 			<add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="managedHandler"/>
 			<remove name="ApplicationInsightsWebTracking"/>
