--- a/.ci/docker/sdk/Dockerfile
+++ b/.ci/docker/sdk/Dockerfile
@@ -1,8 +1,7 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1.100
 
-ENV HOME=/tmp
 ENV DOTNET_ROOT=/usr/share/dotnet
-ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:${DOTNET_ROOT}/tools:${HOME}/bin:${DOTNET_ROOT}
+ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:${DOTNET_ROOT}/tools:${DOTNET_ROOT}
 
 # Download .Net SDK installer script
 RUN curl -s -O -L https://dot.net/v1/dotnet-install.sh
