--- a/NuGet.config
+++ b/NuGet.config
@@ -2,6 +2,6 @@
 <configuration>
 	<packageSources>
 		<add key="nuget.org" value="https://www.nuget.org/api/v2/" />
-		<add key="Elastic Abstractions CI" value="https://ci.appveyor.com/nuget/elasticsearch-net-abstractions" />
+		<add key="Elasticserch clients CI" value="https://ci.appveyor.com/nuget/elasticsearch-net" />
 	</packageSources>
 </configuration>
