--- a/src/Elastic.Apm.Elasticsearch/Elastic.Apm.Elasticsearch.csproj
+++ b/src/Elastic.Apm.Elasticsearch/Elastic.Apm.Elasticsearch.csproj
@@ -19,7 +19,8 @@
     <PackageTags>apm, monitoring, elastic, elasticapm, analytics, elasticsearch, NEST</PackageTags>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Elasticsearch.Net" Version="7.0.0" />
+<!--    <PackageReference Include="Elasticsearch.Net" Version="7.0.0" />-->
+    <PackageReference Include="Elasticsearch.Net" Version="7.5.0-ci20191211T182420" />
     <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="4.5.1" />
   </ItemGroup>
   <ItemGroup>
